src/objects/Star_VerkaufsmonatVarUmsatzbestandteil__c.object
<CustomObject>
    <fields>
        <fullName>Star_Abonnenten__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abonnenten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Album__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Album</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_AnzahlUnits__c</fullName>
        <label>Anzahl Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_Compilation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compilation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Jahr__c</fullName>
        <label>Jahr</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2037</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2038</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2039</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kampagnenzeitraum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Star_Monat__c</fullName>
        <label>Monat</label>
        <picklist>
            <picklistValues>
                <fullName>Januar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Februar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>März</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oktober</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dezember</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kampagnenzeitraum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Star_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Star_VerkaufsmonateTicketing_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Star_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Single__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Tickets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tickets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Umsatz__c</fullName>
        <label>Umsatz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_Verkaufsmonat__c</fullName>
        <formula>TEXT(Star_Monat__c) &amp;&apos; &apos;&amp;  TEXT(Star_Jahr__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verkaufsmonat</label>
        <type>Text</type>
    </fields>
    <label>Verkaufsmonat var. Umsatzbestandteil</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Star_Verkaufsmonat__c</columns>
        <columns>Star_Opportunity__c</columns>
        <columns>Star_Abonnenten__c</columns>
        <columns>Star_Album__c</columns>
        <columns>Star_Compilation__c</columns>
        <columns>Star_Single__c</columns>
        <columns>Star_Tickets__c</columns>
        <columns>Star_Other__c</columns>
        <columns>Star_Umsatz__c</columns>
        <columns>Star_AnzahlUnits__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VM-{0000}</displayFormat>
        <label>Verkaufsmonat Nummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verkaufsmonate var. Umsatzbestandteil</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidationOnBezeichung</fullName>
        <active>true</active>
        <description>at least one Checkbox must be active</description>
        <errorConditionFormula>AND(
Star_Album__c = false,
Star_Tickets__c = false,
Star_Single__c = false,
Star_Other__c = false,
Star_Abonnenten__c = false, 
Star_Compilation__c = false)</errorConditionFormula>
        <errorMessage>Der Verkaufsmonat muss mindestens eine Bezeichnung enthalten (z.B. Album)</errorMessage>
    </validationRules>
</CustomObject>